# backend/admin-gin/internal/app/admin/iam/auth/router.go
@@ -6,20 +6,20 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
-func RegisterRouter(r *gin.RouterGroup, handlers *Handler) {
+func registerRouter(r *gin.RouterGroup, handlers *handler) {
 
 	// 不需鉴权
 	publicGroup := r.Group("/auth")
 	{
-		publicGroup.POST("/register", handlers.Register)
-		publicGroup.POST("/login", handlers.Login)
-		publicGroup.POST("/refresh", handlers.RefreshToken)
+		publicGroup.POST("/register", handlers.register)
+		publicGroup.POST("/login", handlers.login)
+		publicGroup.POST("/refresh", handlers.refresh)
 	}
 
 	// 需要鉴权
 	authGroup := r.Group("/auth")
 	authGroup.Use(middleware.JWT())
 	{
-		// authGroup.POST("/logout", handlers.Logout)
+		authGroup.POST("/logout", handlers.logout)
 	}
 }
